<resources>
    <string name="app_name">المهاجر</string>
    <string name="copyright_activity_splash">Copyright © 2021 Giraffe. All rights reserved</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name_or_type_of_product">Enter name or type of product…</string>
    <string name="product_search">Product Search</string>
    <string name="recent_search">Recent Search</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="opps">Opps!!</string>
    <string name="item">Item</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="login_register">login / register</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="language">language</string>
    <string name="information">Information</string>
    <string name="protection_personal_data"><![CDATA[Protection & Personal Data]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="licences">Licences</string>
    <string name="feedback_share"><![CDATA[Feedback & Share]]></string>
    <string name="rate_our_application">Rate Our Application</string>
    <string name="share">Share</string>
    <string name="do_you_have_more_questions_contact_us">Do you have more Questions? Contact Us.</string>
    <string name="mail">mail</string>
    <string name="mohager_support_com">mohager@support.com</string>
    <string name="phone">phone</string>
    <string name="_20_110_022_1608">+20 110 022 1608</string>
    <string name="verification">Verification</string>
    <string name="enter_your_phone">Enter your phone to verify</string>
    <string name="enter_your_code">Enter Code</string>
    <string name="continue_verify">Continue</string>
    <string name="please_enter_the_verification_code_we_have_sent_to">Please enter the verification code we have sent to</string>
    <string name="send_code">Send Code</string>
    <string name="send_again">Send again</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="by_clicking_sign_up_you_agree_to_our_terms_data_policy">By clicking <b>Register</b>, you agree to our Terms, Data Policy and Cookie Policy. You may receive SMS notifications from us and can opt out at any time.</string>
    <string name="seconds_left">seconds left</string>
    <string name="your_points">Your Points</string>
    <string name="my_orders">My Orders</string>
    <string name="my_addresses">My Addresses</string>
    <string name="edit">edit</string>
    <string name="logout">Logout</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="checkout">Checkout</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="add">Add</string>
    <string name="sauces">Sauces</string>
    <string name="sweets">Sweets</string>
    <string name="drinks">Drinks</string>
    <string name="grocery">Grocery</string>
    <string name="dairy">Dairy</string>
    <string name="oils">Oils</string>
    <string name="preserves">Preserves</string>
    <string name="stock_count">Count in Stock</string>
    <string name="pack_price">Pack Price</string>
    <string name="pack_count">Pack Count</string>
    <string name="sub_pack_price">Sub-Pack Price</string>
    <string name="sub_pack_count">Sub-Pack Count</string>
    <string name="unit_price">Unit Price</string>
    <string name="product_name">Product Name</string>
    <string name="upload">Upload</string>
    <string name="unit_name">Unit name</string>
    <string name="weight">Weight</string>
    <string name="num_of_units">Num of Units</string>
    <string name="unit_weight">Unit Weight</string>
    <string name="num_of_sub_packs">Num of Sub-Packs</string>
    <string name="num_of_packs">Num of Packs in Stock</string>
    <string name="weight_in_stock">Weight in Stock</string>
    <string name="unit">Unit</string>
    <string name="description">Description</string>
    <string name="product_type">Product Type</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="price_per_kg">Price per kg</string>
    <string name="type_weight">type weight...</string>
</resources>