<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mysupermarket.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.mysupermarket.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_basket"
        android:name="com.example.mysupermarket.fragments.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mysupermarket.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.mysupermarket.fragments.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />

</navigation>