<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".fragments.SearchFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/product_search"
        android:textColor="@color/teal_200"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_search_fragment_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search" />

        <EditText
            android:id="@+id/et_search_fragment_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/trans"
            android:hint="@string/enter_name_or_type_of_product"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/purple_700" />

        <ImageView
            android:id="@+id/iv_clear_fragment_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            android:contentDescription="@string/cancel" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_recent_search_fragment_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_recent_search_fragment_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/recent_search" />

        <ImageView
            android:id="@+id/iv_delete_fragment_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete" />
    </LinearLayout>

    <GridView
        android:id="@+id/gv_search_fragment_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:listSelector="@color/trans"
        android:numColumns="1"
        android:scrollbars="none" />

    <TextView
        android:id="@+id/tv_no_search_fragment_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/opps"
        android:visibility="gone" />


</LinearLayout>
