<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".fragments.MoreFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/teal_200"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:text="@string/support" />

            <Button
                android:id="@+id/btn_faq_fragment_more"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/faq"
                app:icon="@drawable/ic_support" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"

                android:background="@drawable/background_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/do_you_have_more_questions_contact_us"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_mail_fragment_more"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/mohager_support_com"
                    android:textAlignment="center"
                    android:textColor="@color/teal_200"
                    app:icon="@drawable/ic_mail"
                    app:iconGravity="textStart"
                    app:strokeColor="@color/light_gray"
                    app:strokeWidth="2dp" />


                <Button
                    android:id="@+id/btn_phone_fragment_more"
                    style="@style/button_style"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/_20_110_022_1608"
                    android:textAlignment="center"
                    app:icon="@drawable/ic_phone"
                    app:iconTint="@color/white"
                    app:iconGravity="textStart" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_language_fragment_more"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/language"
                app:icon="@drawable/ic_language" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:text="@string/information" />


            <Button
                android:id="@+id/btn_protect_fragment_more"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/protection_personal_data"
                app:icon="@drawable/ic_protect" />

            <Button
                android:id="@+id/btn_terms_fragment_more"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/terms_conditions"
                app:icon="@drawable/ic_terms" />

            <Button
                android:id="@+id/btn_licences_fragment_more"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/licences"
                app:icon="@drawable/ic_licence" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:text="@string/feedback_share" />

            <Button
                android:id="@+id/btn_Rate_fragment_more"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/rate_our_application"
                app:icon="@drawable/ic_rate" />

            <Button
                android:id="@+id/btn_share_fragment_more"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/share"
                app:icon="@drawable/ic_share" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>


    <!--
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Rate_fragment_more"
                style="@style/s_background_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/rate_our_application"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_rate" />-->


    <!--<LinearLayout
                    android:id="@+id/ll_share_fragment_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/share"
                        android:src="@drawable/ic_share" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/share"
                        android:textStyle="bold" />
                </LinearLayout>-->
